--- a/css-challenge/src/App.css
+++ b/css-challenge/src/App.css
@@ -1,28 +1,376 @@
-* {
-  box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
+:root {
+    --primary-color: #3e7eb8;
+    --success-color: #7eb83e;
+    --opaque-color: #528cc0;
+    --transparent-color: #d0daf3;
+    --orangish: #e98a60;
+    --burgundy: #e8667f;
 }
+
 body {
-  background-color: rgb(229, 233, 244);
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: Poppins;
 }
 
-.App {
-  background-color: rgb(229, 233, 244);
-  padding: 40px;
+.container {
+    padding-right: 30px;
+    padding-left: 30px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
-.Container {
-  align-items: center;
-  background-color: rgb(62, 126, 184);
-  border-radius: 25px;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  font-weight: bold;
-  padding: 40px;
+section.section-exercise {
+    background-color: var(--primary-color);
 }
+
+section.section-exercise nav.side-nav {
+    display: none;
+}
+
+section.section-exercise .profile {
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+section.section-exercise .left {
+    margin-top: 20px;
+}
+
+section.section-exercise .profile h1 {
+    margin: 0;
+}
+
+section.section-exercise .profile p.muted{
+    font-size: small;
+    color: var(--transparent-color);
+    margin: 0;
+    padding: 5px 0;
+}
+
+section.section-exercise .profile a.notification-bell {
+    background-color: var(--opaque-color);
+    border-radius: 1em;
+    margin-top: 16px;
+    padding: 19px;
+    align-self: center;
+}
+
+section.section-exercise .profile a i {
+    font-size: 20px;
+    color: white;
+    align-self: center;
+}
+
+section.section-exercise .search {
+    margin: 30px 0;
+}
+
+section.section-exercise .search .form-field input{
+    min-height: 50px;
+    width: 100%;
+    border-radius: 1em;
+    border: none;
+    padding-left: 40px;
+    font-size: 15px;
+    color: white;
+    background-color: var(--opaque-color);
+    cursor: pointer;
+    box-sizing: border-box;
+}
+
+section.section-exercise .search input:focus{
+    border: 1px solid white;
+    color: white;
+}
+
+section.section-exercise .search .form-field {
+    position: relative;
+    
+    
+}
+
+.form-field::after{
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    position: absolute;
+    transform: translate(0,-50%);
+    left: 10px;
+    bottom: 15%;
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    color: white;
+    content: "\f002";
+}
+
+section.section-exercise .mood-question {
+    color: white;
+    display: flex;
+    padding: 10px 0;
+    margin: 0;
+    justify-content: space-between;
+    align-items: center;
+}
+
+section.section-exercise .mood-question a{ 
+    text-decoration: none;
+    color: white;
+}
+
+section.section-exercise img.radio-emoji {
+    height: 28px;
+    width: 28px;
+    background-color: var(--opaque-color);
+    border-radius: 1em;
+    margin-top: 16px;
+    padding: 19px;
+}
+
+section.section-exercise .mood-item {
+    display: flex;
+    justify-content: space-between;
+    display: inline-block;
+    padding: 4px;
+}
+
+section.section-exercise .mood-item input[type="radio"]{
+    margin:0;
+    padding:0;
+    cursor: pointer;
+    -webkit-appearance:none;
+       -moz-appearance:none;
+            appearance:none;
+            opacity: 0;
+}
+
+section.section-exercise .mood-item p{
+    display: block;
+    text-align: center;
+    color: white;
+    font-size: 14px;
+    margin: 0;
+}
+
+input[type="radio"]:checked + label {
+    color: var(--success-color);
+}
+  
+input[type=radio]:checked + img{
+    outline: 2px solid var(--success-color);
+    color: var(--success-color);
+  }
+
+input[type="radio"]:hover{
+    outline: 2px solid #f00;
+}
+
+section.section-exercise .exercise-list {
+    background: white;
+    border-top-left-radius: 2em;
+    border-top-right-radius: 2em;
+    overflow: auto;
+    height: 1%;
+}
+
+section.section-exercise .exercise-heading {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+section.section-exercise .exercise-heading a {
+    text-decoration: none;
+    color: black;
+}
+
+section.section-exercise .exercise-list .fa-minus{
+    font-size: 30px;
+    color: var(--transparent-color);
+    text-align: center;
+    margin: auto;
+    width: 100%;
+}
+
+section.section-exercise .exercise-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    position: relative;
+    margin: 10px 0;
+    padding: 10px;
+    border: 1px solid var(--transparent-color);
+    outline-offset: 10px;
+    border-radius: 1em;
+}
+
+section.section-exercise .active-shadow {
+    border: 1px solid white;
+    -webkit-box-shadow: 0px 15px 10px var(--transparent-color);
+    -moz-box-shadow: 0px 15px 10px var(--transparent-color);
+    box-shadow: 0px 10px 15px var(--transparent-color);
+}
+
+section.section-exercise .exercise-item a.card-logo {
+    height: 28px;
+    width: 28px;
+    border-radius: 1em;
+    padding: 19px;
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    text-align: center;
+}
+section.section-exercise .exercise-item div {
+    position: absolute;
+    left: 30%;
+    top: 20%;
+
+}
+
+section.section-exercise .exercise-item h5, p {
+   margin: 0;
+}
+
+section.section-exercise .exercise-item p.muted {
+    font-size: small;
+    color: grey;
+}
+
+section.section-exercise .exercise-item a {
+    text-decoration: none;
+    color: black;
+    margin-top: 5px;
+}
+
+section.section-exercise .exercise-item a.ts-color {
+    color: grey;
+}
+
+section.section-exercise .mobile-menu-bar {
+    height: 60px;
+    width: 100%;
+    margin: 0;
+    background-color: white;
+    -webkit-box-shadow: 0px -1px 10px rgba(204, 204, 204, 0.75);
+    -moz-box-shadow: 0px -1px 10px rgba(204, 204, 204, 0.75);
+    box-shadow: 0px -1px 10px rgba(204, 204, 204, 0.75);
+    position: fixed;
+    z-index: 999;
+    bottom: 0;
+    width: 100%
+}
+
+section.section-exercise .mobile-menu {
+    height: 60px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+section.section-exercise .mobile-menu a {
+    color: var(--transparent-color);
+    font-size: 20px;
+    font-weight: 700;
+}
+
+/* UTILITY CLASSES */
+.orange {
+    background-color: var(--orangish);
+}
+
+.primary-color {
+    background-color: var(--primary-color);
+}
+
+.burgundy {
+    background-color: var(--burgundy);
+}
+
+.active {
+    color: var(--primary-color);
+}
+
+.active::after {
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    position: absolute;
+    transform: translate(0,-50%);
+    left: 58px;
+    bottom: -35%;
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    color: var(--primary-color);
+    content: "\f111";
+}
+
+/* MEDIA QUERIES */
+
+  @media (min-width: 768px) {
+    .container {
+      padding-right: 50px;
+      padding-left: 50px;
+    }
+
+    .active::after {
+        left: 125px;
+        bottom: -35%;
+    }
+
+    section.section-exercise .mood-item {
+        padding: 0 40px;
+        justify-content: space-between;
+        align-items: center;
+    }
+  }
+  @media (min-width: 992px) {
+    .container {
+      padding-right: 70px;
+      padding-left: 70px;
+      color: red;
+    }
+
+    .active::after {
+        left: 185px;
+        bottom: -35%;
+    }
+  }
+  @media (min-width: 1200px) {
+    .container {
+      padding-right: 110px;
+      padding-left: 110px;
+      color: blue;
+    }
+
+    .active::after {
+        left: 262px;
+        bottom: -35%;
+    }
+
+    section.section-exercise .mood-item {
+        padding: 20px;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    /* section.section-exercise nav.side-nav {
+        display: flex;
+        max-height: 1vh;
+        background-color: black;
+        position: absolute;
+        top: 0;
+        left: 0;
+        overflow: auto;
+    }
+
+    section.section-exercise .profile, .search, .exercise-list {
+        
+    } */
+
+  }
